objects/L2O_Reseller_Prices__c.object
<CustomObject>
    <fields>
        <fullName>L2O_BusinessRegion__c</fullName>
        <label>Business Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                    <default>true</default>
                    <label>USA</label>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Client_Size_End__c</fullName>
        <label>Client Size End</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Client_Size_Start__c</fullName>
        <label>Client Size Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Consult_Type__c</fullName>
        <label>Consult Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Consult_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_ContractPath__c</fullName>
        <label>Contract Path</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contract_Path</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Contracting_Account_ID__c</fullName>
        <formula>L2O_Contracting_Account__r.L2O_GUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contracting Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Contracting_Account_Name__c</fullName>
        <label>Contracting Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Contracting_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contracting Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reseller Prices</relationshipLabel>
        <relationshipName>Reseller_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2O_Fee_Type__c</fullName>
        <label>Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fee_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_GrandParent_Product_Code__c</fullName>
        <formula>IF(ISBLANK(L2O_GrandParent_Product__r.ProductCode),&apos;NULL&apos; , L2O_GrandParent_Product__r.ProductCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GrandParent Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_GrandParent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GrandParent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Reseller Prices (GrandParent Product)</relationshipLabel>
        <relationshipName>Reseller_Prices2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Initial_Utilization_Cap__c</fullName>
        <label>Initial Utilization Cap</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2O_Package_Product_Code__c</fullName>
        <label>Package Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Parent_Product_Code__c</fullName>
        <formula>IF(ISBLANK(L2O_Parent_Product__r.ProductCode), &apos;NULL&apos; , L2O_Parent_Product__r.ProductCode)</formula>
        <label>Parent Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Parent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Reseller Prices (Parent Product)</relationshipLabel>
        <relationshipName>Reseller_Prices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Product_Code__c</fullName>
        <formula>L2O_Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Reseller Prices</relationshipLabel>
        <relationshipName>Reseller_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_StateProvince__c</fullName>
        <label>State/Province</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Utilization_Assumption__c</fullName>
        <label>Utilization Assumption</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <label>Reseller Prices</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>L2O_Product__c</columns>
        <columns>L2O_Consult_Type__c</columns>
        <columns>L2O_Fee_Type__c</columns>
        <columns>L2O_Parent_Product_Code__c</columns>
        <columns>L2O_Client_Size_Start__c</columns>
        <columns>L2O_Client_Size_End__c</columns>
        <columns>L2O_Price__c</columns>
        <columns>L2O_Product_Code__c</columns>
        <columns>L2O_Effective_Date__c</columns>
        <columns>L2O_Expiration_Date__c</columns>
        <columns>L2O_Initial_Utilization_Cap__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>L2O_Product_Code__c</field>
            <operation>equals</operation>
            <value>WEIGM</value>
        </filters>
        <filters>
            <field>L2O_Expiration_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RESELLPRI-{000000}</displayFormat>
        <label>Reseller Prices Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reseller Prices</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>